--- a/index.html
+++ b/index.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <meta charset="utf-8">
-      <title>Admin Panel</title>
-      <link rel="stylesheet" href="css/style.css">
-      <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
-      <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
-  </head>
-  <body>
-    <section class="navbar">
-      <div class="nav_container">
-        <div class="nav_wrapper nav_logo">
-          <span>Just Do It</span>
-          <i class="fas fa-bars"></i>
-        </div>
-        <div class="nav_wrapper nav_pages">
-          <ul>
-            <li class="nav_pages">
-              <i class="far fa-star"></i>
-              <span class="nav_pages-link">Gereral</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-calendar-week"></i>
-              <span class="nav_pages-link">Details</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-link"></i>
-              <span class="nav_pages-link">Links</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-money-check"></i>
-              <span class="nav_pages-link">Banners</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-user-check"></i>
-              <span class="nav_pages-link">Personal</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-dollar-sign"></i>
-              <span class="nav_pages-link">Payout</span>
-            </li>
-            <li class="nav_pages">
-              <i class="fas fa-undo-alt"></i>
-              <span class="nav_pages-link">Postback</span>
-            </li>
-          </ul>
-        </div>
-        <div class="nav_wrapper nav_manager">
-          <span>Your Manager</span>
-          <div class="manager_data">
-            <span>Janusz M.</span>
-          </div>
 
-        </div>
+<head>
+  <meta charset="utf-8">
+  <title>Admin Panel</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,600" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+  <section class="navigation_menu">
+    <div class="navbar">
+      <div class="nav_logo">
+        <a class="logo" href="#"><img src="images/logo.png"></a>
+        <a class="hamburger" href="#"><i class="icon-hamburger fas fa-bars"></i></a>
       </div>
-    </section>
+      <div class="nav_wrapper">
+        <ul>
+          <li>
+            <a href="#"><i class="icon-general far fa-star"></i>Gereral</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-details fas fa-calendar-week"></i>Details</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-links fas fa-link"></i>Links</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-banners fas fa-money-check"></i>Banners</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-personal fas fa-user-check"></i>Personal</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-payout fas fa-dollar-sign"></i>Payout</a>
+          </li>
+          <li>
+            <a href="#"><i class="icon-postback fas fa-undo-alt"></i>Postback</a>
+          </li>
+        </ul>
+      </div>
+      <div class="nav_manager">
+        <h4>Your Manager</h4>
+        <a><img class="manager_img" src="images/avatar-manager.jpg">Janusz M.</a>
+      </div>
+    </div>
+  </section>
 
-  </body>
+</body>
+
 </html>
