fix few bugs and make few styles in navigation.scss - navbar

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
       <div class="nav_wrapper">
         <ul>
           <li>
-            <a href="#"><i class="icon-general far fa-star"></i>Gereral</a>
+            <a href="#"><i class="icon-general far fa-star"></i><span>Gereral</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-details fas fa-calendar-week"></i>Details</a>
+            <a href="#"><i class="icon-details fas fa-calendar-week"></i><span>Details</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-links fas fa-link"></i>Links</a>
+            <a href="#"><i class="icon-links fas fa-link"></i><span>Links</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-banners fas fa-money-check"></i>Banners</a>
+            <a href="#"><i class="icon-banners fas fa-money-check"></i><span>Banners</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-personal fas fa-user-check"></i>Personal</a>
+            <a href="#"><i class="icon-personal fas fa-user-check"></i><span>Personal data</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-payout fas fa-dollar-sign"></i>Payout</a>
+            <a href="#"><i class="icon-payout fas fa-dollar-sign"></i><span>Payout</span></a>
           </li>
           <li>
-            <a href="#"><i class="icon-postback fas fa-undo-alt"></i>Postback</a>
+            <a href="#"><i class="icon-postback fas fa-undo-alt"></i><span>Postback</span></a>
           </li>
         </ul>
       </div>
       <div class="nav_manager">
         <h4>Your Manager</h4>
-        <a><img class="manager_img" src="images/avatar-manager.jpg">Janusz M.</a>
+        <a><img class="manager_img" src="images/avatar-manager.jpg"><span>Janusz M.</span></a>
       </div>
     </div>
   </section>
