add profilebar on page, create _profilebar.scss, add section in index.html, change location of navigation.scss from components to sections and add _buttons.scss

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+  <section class="prof_bar">
+    <ul>
+      <li class="wallet">
+        <a href="#"><i class="fas fa-wallet"></i><span>$1,5000.00</span><i class="fas fa-arrow-down"></i></a>
+      </li>
+      <li class="notification">
+        <a href="#"><i class="far fa-bell"></i></a>
+      </li>
+      <li class="profile">
+        <a href="#"><i class="far fa-user"></i><span>Jan Karol Chodkiewicz</span></a>
+      </li>
+        <a href="#"><i class="fas fa-sign-out-alt"></i>
+      </li>
+    </ul>
+  </section>
   <section class="navigation_menu">
     <div class="navbar">
       <div class="nav_logo">
@@ -46,6 +61,9 @@
         <a><img class="manager_img" src="images/avatar-manager.jpg"><span>Janusz M.</span></a>
       </div>
     </div>
+  </section>
+  <section class="gen_stat">
+
   </section>
 
 </body>
