--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <li class="profile">
         <a href="#"><i class="far fa-user"></i><span>Jan Karol Chodkiewicz</span></a>
       </li>
-        <a href="#"><i class="fas fa-sign-out-alt"></i>
+      <li class="exit">
+        <a href="#"><i class="fas fa-sign-out-alt"></i></a>
       </li>
     </ul>
   </section>
@@ -63,6 +64,16 @@
     </div>
   </section>
   <section class="gen_stat">
+    <div class="header">
+      <h3>General statistic</h3>
+    </div>
+    <div class="date_section">
+      <div class="input-date" id="date-start" contenteditable="true">20.06.2020<i class="far fa-calendar-alt"></i></div>
+      <a role="button" class="btn btn-warning btn-square" href="#"><i class="fas fa-redo"></i></a>
+    </div>
+    <div class="date_section">
+      <img src="images/Earning charts.png">
+    </div>
 
   </section>
 
