add links section

--- a/index.html
+++ b/index.html
@@ -68,13 +68,71 @@
       <h3>General statistic</h3>
     </div>
     <div class="date_section">
-      <div class="input-date" id="date-start" contenteditable="true">20.06.2020<i class="far fa-calendar-alt"></i></div>
-      <a role="button" class="btn btn-warning btn-square" href="#"><i class="fas fa-redo"></i></a>
+      <div class="input-date" id="date-start" contenteditable="true">18.06.2020</div>
+      <div class="input-date" id="date-end" contenteditable="true">20.06.2020<i class="far fa-calendar-alt"></i></div>
+      <button class="btn btn-warning btn-square" href="#"><i class="fas fa-redo"></i></button>
     </div>
     <div class="date_section">
-      <img src="images/Earning charts.png">
+      <div class="date_numbers">
+        <div class="date-number"><span>Visit Singups</span><span>124</span></div>
+        <div class="date-number"><span>Net deposit</span>564</div>
+      </div>
+      <div class="date_numbers">
+        <div class="date-number"><span>FTD</span><span>445</span></div>
+        <div class="date-number"><span>Turn over</span><span>432</span></div>
+      </div>
     </div>
-
+    <div class="date_section">
+      <img class="gen-stat-img" src="images/Earning charts.png">
+    </div>
+  </section>
+  <section class="links">
+    <div class="header">
+      <h3>Links</h3>
+    </div>
+    <div class="links_section">
+      <button class="btn btn-warning">+ add new</button>
+      <div class="link">
+        <span>Home page</span>
+        <a href="#">http://www.homepage.com</a>
+      </div>
+      <div class="link">
+        <span>Currently offer</span>
+        <a href="#">http://www.currently.com</a>
+      </div>
+      <div class="link">
+        <span>Blurpix</span>
+        <a href="#">http://www.blurpix.com</a>
+      </div>
+      <div class="link">
+        <span>Your Site</span>
+        <a href="#">http://www.yoursite.com</a>
+      </div>
+      <div class="link">
+        <span>Google</span>
+        <a href="#">http://www.google.com</a>
+      </div>
+      <div class="link">
+        <span>Facebook</span>
+        <a href="#">http://www.facebook.com</a>
+      </div>
+      <div class="link">
+        <span>Dashbord</span>
+        <a href="#">http://www.dashbord.com</a>
+      </div>
+      <div class="link">
+        <span>Blurax</span>
+        <a href="#">http://www.blurax.com</a>
+      </div>
+      <div class="link">
+        <span>Piece of Wine</span>
+        <a href="#">http://www.pieceofwine.com</a>
+      </div>
+      <div class="link">
+        <span>Twitter</span>
+        <a href="#">http://www.twitter.com</a>
+      </div>
+    </div>
   </section>
 
 </body>
