add few new style in _navigation.scss

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <section class="prof_bar">
     <ul>
       <li class="wallet">
-        <a href="#"><i class="fas fa-wallet"></i><span>$1,5000.00</span><i class="fas fa-arrow-down"></i></a>
+        <a href="#"><i class="fas fa-wallet"></i><span class="prof-bar-text">$1,5000.00</span><i class="fas fa-arrow-down"></i></a>
       </li>
       <li class="notification">
         <a href="#"><i class="far fa-bell"></i></a>
       </li>
       <li class="profile">
-        <a href="#"><i class="far fa-user"></i><span>Jan Karol Chodkiewicz</span></a>
+        <a href="#"><i class="far fa-user"></i><span class="prof-bar-text">Jan Karol Chodkiewicz</span></a>
       </li>
       <li class="exit">
         <a href="#"><i class="fas fa-sign-out-alt"></i></a>
