--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <section class="prof_bar">
     <ul>
       <li class="wallet">
-        <a href="#"><i class="fas fa-wallet"></i><span class="prof-bar-text">$1,5000.00</span><i class="fas fa-arrow-down"></i></a>
+        <a href="#"><i class="fas fa-wallet"></i><span class="prof-bar-text">$1,5000.00</span><i
+            class="fas fa-arrow-down"></i></a>
       </li>
       <li class="notification">
         <a href="#"><i class="far fa-bell"></i></a>
@@ -26,6 +27,7 @@
       </li>
     </ul>
   </section>
+
   <section class="navigation_menu">
     <div class="navbar">
       <div class="nav_logo">
@@ -63,29 +65,35 @@
       </div>
     </div>
   </section>
+
   <section class="gen_stat">
     <div class="header">
       <h3>General statistic</h3>
     </div>
-    <div class="date_section">
-      <div class="input-date" id="date-start" contenteditable="true">18.06.2020</div>
-      <div class="input-date" id="date-end" contenteditable="true">20.06.2020<i class="far fa-calendar-alt"></i></div>
-      <button class="btn btn-warning btn-square" href="#"><i class="fas fa-redo"></i></button>
+    <div class="input_section">
+      <div class="input_date_section">
+        <div class="input-date" id="date-start" contenteditable="true">18.06.2020</div>
+        <div class="input-date" id="date-end" contenteditable="true">20.06.2020<i class="far fa-calendar-alt"></i></div>
+      </div>
+      <div class="input_date_btn">
+        <a role="button" href="#" class="btn btn-warning btn-square"><i class="fas fa-redo"></i></a>
+      </div>
     </div>
     <div class="date_section">
       <div class="date_numbers">
-        <div class="date-number"><span>Visit Singups</span><span>124</span></div>
-        <div class="date-number"><span>Net deposit</span>564</div>
+        <div class="date-number"><span>Visit Singups</span><span class="date-number-span">124</span></div>
+        <div class="date-number"><span>Net deposit</span><span class="date-number-span">564</span></div>
       </div>
       <div class="date_numbers">
-        <div class="date-number"><span>FTD</span><span>445</span></div>
-        <div class="date-number"><span>Turn over</span><span>432</span></div>
+        <div class="date-number"><span>FTD</span><span class="date-number-span">445</span></div>
+        <div class="date-number"><span>Turn over</span><span class="date-number-span">432</span></div>
       </div>
     </div>
     <div class="date_section">
       <img class="gen-stat-img" src="images/Earning charts.png">
     </div>
   </section>
+
   <section class="links">
     <div class="header">
       <h3>Links</h3>
