--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </section>
 
   <section class="gen_stat">
-    <div class="header">
+    <div class="header_gen_stat">
       <h3>General statistic</h3>
     </div>
     <div class="input_section">
@@ -95,11 +95,13 @@
   </section>
 
   <section class="links">
-    <div class="header">
+    <div class="header_links">
       <h3>Links</h3>
     </div>
     <div class="links_section">
-      <button class="btn btn-warning">+ add new</button>
+      <div class="links_buttom">
+        <a role="button" href="#" class="btn btn-warning">+ add new</a>
+      </div>
       <div class="link">
         <span>Home page</span>
         <a href="#">http://www.homepage.com</a>
@@ -139,6 +141,9 @@
       <div class="link">
         <span>Twitter</span>
         <a href="#">http://www.twitter.com</a>
+      </div>
+      <div class="links_buttom">
+        <a role="button" href="#" class="btn btn-warning">+ add new</a>
       </div>
     </div>
   </section>
