finish links section

--- a/index.html
+++ b/index.html
@@ -103,44 +103,104 @@
         <a role="button" href="#" class="btn btn-warning">+ add new</a>
       </div>
       <div class="link">
-        <span>Home page</span>
-        <a href="#">http://www.homepage.com</a>
+        <span class="link-span-1">Home page</span>
+        <span class="link-span-2">
+          <a href="#">http://www.homepage.com</a>
+        </span>
+        <span class="link-span-3">
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Currently offer</span>
-        <a href="#">http://www.currently.com</a>
+        <span>
+          <a href="#">http://www.currently.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Blurpix</span>
-        <a href="#">http://www.blurpix.com</a>
+        <span>
+          <a href="#">http://www.blurpix.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Your Site</span>
-        <a href="#">http://www.yoursite.com</a>
+        <span>
+          <a href="#">http://www.yoursite.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Google</span>
-        <a href="#">http://www.google.com</a>
+        <span>
+          <a href="#">http://www.google.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Facebook</span>
-        <a href="#">http://www.facebook.com</a>
+        <span>
+          <a href="#">http://www.facebook.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Dashbord</span>
-        <a href="#">http://www.dashbord.com</a>
+        <span>
+          <a href="#">http://www.dashbord.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Blurax</span>
-        <a href="#">http://www.blurax.com</a>
+        <span>
+          <a href="#">http://www.blurax.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Piece of Wine</span>
-        <a href="#">http://www.pieceofwine.com</a>
+        <span>
+          <a href="#">http://www.pieceofwine.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="link">
         <span>Twitter</span>
-        <a href="#">http://www.twitter.com</a>
+        <span>
+          <a href="#">http://www.twitter.com</a>
+        </span>
+        <span>
+          <a href="#"><i class="link-icon-links fas fa-link"></i></a>
+          <a href="#"><i class="link-icon-trash far fa-trash-alt"></i></a>
+        </span>
       </div>
       <div class="links_buttom">
         <a role="button" href="#" class="btn btn-warning">+ add new</a>
