finish links section and modify few styles on navigationbar and profilebar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             class="fas fa-arrow-down"></i></a>
       </li>
       <li class="notification">
-        <a href="#"><i class="far fa-bell"></i></a>
+        <span>
+          <a href="#"><i class="far fa-bell"></i></a>
+        </span>
       </li>
       <li class="profile">
         <a href="#"><i class="far fa-user"></i><span class="prof-bar-text">Jan Karol Chodkiewicz</span></a>
@@ -61,7 +63,9 @@
       </div>
       <div class="nav_manager">
         <h4>Your Manager</h4>
-        <a><img class="manager_img" src="images/avatar-manager.jpg"><span>Janusz M.</span></a>
+        <span>
+          <a><img class="manager_img" src="images/manager.png"><span>Janusz M.</span></a>
+        </span>
       </div>
     </div>
   </section>
