fix link to subpage from gereral to general and set links in links section in column

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="nav_wrapper">
         <ul>
           <li>
-            <a href="#"><i class="icon-general far fa-star"></i><span>Gereral</span></a>
+            <a href="#"><i class="icon-general far fa-star"></i><span>General</span></a>
           </li>
           <li>
             <a href="#"><i class="icon-details fas fa-calendar-week"></i><span>Details</span></a>
